# osft

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: blog_post_en.md  blog_post_zh.md  promo_posts.md
docs/notes/: EXPERIMENT_REPORT.md  FULL_EXPERIMENT_REPORT.md  OSFT_一区冲刺计划.md  OSFT_写稿准备.md  OSFT_完整研究报告.md  OSFT_最终实验结果.md  OSFT_核心发现.md  OSFT_论文准备.md  OSFT_谱物理验证计划.md
main/: main.py  trans.py
main/baselines/: adapter.py  full_finetune.py  lora.py
main/eval/: fem_validator.py  latent_geometry.py  metrics.py  spectral.py  visualize.py
main/experiments/: run_all.py
results/: OSFTpp_DESIGN.md  OSFTpp_REAL_DESIGN.md  e1_300ep.json  eval_checkpoints.json  final_eval.json
scripts/: README.md  convert_dataset.py  eigenmode_correlation.py  eigenmode_svd_perturb.py  eval_checkpoints.py  eval_final.py  gen_paper_tables.py  generate_simp_data.py  generate_synthetic_data.py  physics_latent_probe.py  quickstart.py  run_curriculum.py  run_e15_generalization.py  run_e1_real.py  run_e1_real_pretrained.py  run_e1_simp.py  run_experiments_phase2.py  run_overnight.py  run_scaling.py  run_scaling_lean.py  test_inverted_osft.py  train_physics_gan.py  train_physics_latent_gan.py  train_taylor_gan.py  train_vf_conditioned_gan.py  viz_results.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_data_loader.py  test_decomposer.py  test_metrics.py  test_physics_loss.py  test_subspace_layers.py  test_topologygan.py
(+43 files in other folders)
